k8s/service-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-auth
  namespace: mern-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-auth
  template:
    metadata:
      labels:
        app: service-auth
    spec:
      containers:
        - name: service-auth
          image: europe-west1-docker.pkg.dev/mern-devops-1774711262/mern-repo/service-auth:latest
          ports:
            - containerPort: 3002
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /auth/register
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /auth/login
              port: 3002
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: service-auth
  namespace: mern-prod
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: service-auth
  ports:
    - name: http
      port: 3002
      targetPort: 3002
  type: NodePort
