k8s/service-items.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-items
  namespace: mern-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-items
  template:
    metadata:
      labels:
        app: service-items
    spec:
      containers:
        - name: service-items
          image: europe-west1-docker.pkg.dev/mern-devops-1774711262/mern-repo/service-items:latest
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /api/items
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: service-items
  namespace: mern-prod
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: service-items
  ports:
    - name: http
      port: 3001
      targetPort: 3001
  type: NodePort
