k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress
  namespace: mern-prod
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: frontend-service
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /api/items/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-items
                port:
                  number: 3001
          - path: /auth/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-auth
                port:
                  number: 3002
          - path: /health/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-health
                port:
                  number: 3003
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
